# JamesMa-pythonforfinance2nd

./: .api.example  .gitignore  README.md  pyproject.toml
Chapters/: ch1.ipynb  ch2.ipynb
