[tool.poetry]
name = "JamesMa-pythonforfinance2nd"
version = "0.1.0"
description = "A github repo for the Book Mastering Python for Finance - Second Edition by James Ma Weiming"
authors = ["eisvogel.eth <eisvogel.eth>"]
license = "GPL-3.0 license"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.1.1"
matplotlib = "*"
numpy = "*"
pandas = "*"
scikit-learn = "*"
seaborn = "*"
v20 = "*"
ipykernel = "^6.29.5"
nasdaq-data-link = "^1.0.4"
mplfinance = "^0.12.10b0"
statsmodels = "^0.14.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
